Crash in [@ nsImapMailFolder::ExpungeAndCompact::<T>::operator()]
Categories
(MailNews Core :: Networking: IMAP, defect, P1)
Tracking
(thunderbird_esr102 unaffected, thunderbird105+ verified)
Tracking | Status | |
---|---|---|
thunderbird_esr102 | --- | unaffected |
thunderbird105 | + | verified |
People
(Reporter: wsmwk, Assigned: benc)
References
(Regression)
Details
(Keywords: crash, regression, topcrash-thunderbird)
Crash Data
Attachments
(1 file)
48 bytes,
text/x-phabricator-request
|
rjl
:
approval-comm-beta+
|
Details | Review |
Topcrash for 105.0a1 and 105.0b1. With crashes starting on 2022-08-05, this is then regression of bug 1782374.
Crash report: https://crash-stats.mozilla.org/report/index/e5b82293-cb28-408b-ac2f-c52010220812
Reason: EXCEPTION_ACCESS_VIOLATION_READ
Top 10 frames of crashing thread:
0 xul.dll nsImapMailFolder::ExpungeAndCompact::<lambda_1>::operator const mailnews/imap/src/nsImapMailFolder.cpp:1281
1 xul.dll UrlListener::OnStopRunningUrl mailnews/base/src/UrlListener.h:77
2 xul.dll nsMsgMailNewsUrl::SetUrlState mailnews/base/src/nsMsgMailNewsUrl.cpp:232
3 xul.dll nsImapMailFolder::SetUrlState mailnews/imap/src/nsImapMailFolder.cpp:6286
4 xul.dll `anonymous namespace'::SyncRunnable5<nsIImapMailFolderSink, nsIImapProtocol*, nsIMsgMailNewsUrl*, bool, bool, nsresult>::Run mailnews/imap/src/nsSyncRunnableHelpers.cpp:221
5 xul.dll mozilla::RunnableTask::Run xpcom/threads/TaskController.cpp:538
6 xul.dll mozilla::TaskController::DoExecuteNextTaskOnlyMainThreadInternal xpcom/threads/TaskController.cpp:851
7 xul.dll mozilla::TaskController::ExecuteNextTaskOnlyMainThreadInternal xpcom/threads/TaskController.cpp:683
8 xul.dll mozilla::TaskController::ProcessPendingMTTask xpcom/threads/TaskController.cpp:461
9 xul.dll mozilla::detail::RunnableFunction<`lambda at /builds/worker/checkouts/gecko/xpcom/threads/TaskController.cpp:187:7'>::Run xpcom/threads/nsThreadUtils.h:531
Reporter | ||
Updated•2 years ago
|
Updated•2 years ago
|
Assignee | ||
Comment 1•2 years ago
|
||
Ahh... I think I was so fixated on getting the listener invocation working properly, that I failed to take into account the case where a listener isn't passed in :-)
I think I've got a simple fix.
Try run here:
https://treeherder.mozilla.org/#/jobs?repo=try-comm-central&revision=eccbb8e4470e282802f00119c007bb1855e0d39f
Assignee | ||
Comment 2•2 years ago
|
||
Reporter | ||
Comment 3•2 years ago
|
||
Just to be clear, I don't have a real user reporting this.
Updated•2 years ago
|
Assignee | ||
Comment 4•2 years ago
|
||
(In reply to Wayne Mery (:wsmwk) from comment #3)
Just to be clear, I don't have a real user reporting this.
yep, and no replication case. So I guess it's a matter of landing the patch and leaving the bug open to see if the crash reports dry up?
Pushed by geoff@darktrojan.net:
https://hg.mozilla.org/comm-central/rev/b92dd8ee2aff
Fix crash on null listener in IMAP compaction/expunge. r=mkmelin
Comment 6•2 years ago
|
||
Let's not leave it open. It certainly fixes some cases. If needed, a new bug is easier, also for uplifting purposes.
Comment 7•2 years ago
•
|
||
Comment on attachment 9291942 [details]
Bug 1787650 - Fix crash on null listener in IMAP compaction/expunge. r=mkmelin
[Triage Comment]
Approved for 105.0b2 (per wsmwk)
Comment 8•2 years ago
|
||
bugherder uplift |
Thunderbird 105.0b2:
https://hg.mozilla.org/releases/comm-beta/rev/86313a666ac3
Reporter | ||
Comment 9•2 years ago
|
||
Thanks.
Doesn't exist in 105.0b2.
Description
•