Bug 1787650 - Fix crash on null listener in IMAP compaction/expunge. r=mkmelin

Differential Revision: https://phabricator.services.mozilla.com/D155801